--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,10 @@
 </head>
 
 <body>
+    <!-- Se agrega div con id root para montar la aplicación de React -->
+    <div id="root"></div>
+    <script src="../src/index.js"></script>
+
     <header>
         <h1 class="titulo">Jafet Jiménez <span>Developer</span></h1>
     </header>
