Se elimina formulario duplicado en html

--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,6 @@
 </head>
 
 <body>
-    <!-- Se agrega div con id root para montar la aplicación de React -->
-    <div id="root"></div>
-    <script src="../src/index.js"></script>
 
     <header>
         <h1 class="titulo">Jafet Jiménez <span>Developer</span></h1>
@@ -38,7 +35,7 @@
             <a href="#">Contacto</a>
         </div>
     </nav>
-
+    
     <section class="hero">
         <div class="contenedor-hero">
             <h2 class="titulo">Diseño y desarrollo web/móvil</h2>
@@ -131,41 +128,14 @@
     </div>
 
     <section>
-        <h2>Contacto</h2>
-        <form class="formulario">
-            <fieldset>
-                <legend>Contáctanos llenando todos los campos</legend>
-                <div class="contenedor-campos">
-                <div class="campo">
-                    <label>Nombre</label>
-                    <input class="input-text" type="text" placeholder="Tu nombre">
-                </div>
-
-                <div class="campo">
-                    <label>Teléfono</label>
-                    <input class="input-text" type="tell" placeholder="Tu teléfono">
-                </div>
-
-                <div class="campo">
-                    <label>Correo electrónico</label>
-                    <input class="input-text" type="email" placeholder="Tu email">
-                </div>
-
-                <div class="campo">
-                    <label>Mensaje</label>
-                    <textarea class="input-text"></textarea>
-                </div>
-                </div> <!-- .contenedor-campo -->
-                <div class="alinear-derecha flex ">
-                    <input class="boton w-sm-100" type="submit" value="Enviar">
-                </div>
-            </fieldset> 
-        </form>
+        <div id="root"></div>
+        <script src="../src/index.js"></script>
     </section>
+    
 </main>
 
     <footer>
-        <footer><br>Todos los derechos reservados al autor</footer>
+        <p><br>Todos los derechos reservados al autor</br></p>
     </footer>
 
 </body>
